[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/scenes/enemyFly.gd" type="Script" id=1]
[ext_resource path="res://assets/art/png/enemies/fly_dead.png" type="Texture" id=2]
[ext_resource path="res://assets/art/png/enemies/fly_normal.png" type="Texture" id=3]
[ext_resource path="res://assets/art/png/enemies/fly_fly.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/pop.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.3333
height = 14.6667

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.50002, 21.3333 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 18.6667

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "dead"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"

[node name="enemyFly" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 128
collision_mask = 32
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
speed_scale = 20.0
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3.55271e-15, 1.33333 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="topChecker" type="Area2D" parent="."]
collision_layer = 0

[node name="hurtbox" type="CollisionShape2D" parent="topChecker"]
position = Vector2( -1.33333, -11.3333 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="sidechecker" type="Area2D" parent="."]
collision_layer = 0

[node name="hitbox" type="CollisionShape2D" parent="sidechecker"]
position = Vector2( -0.666667, 2.66667 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/dead = SubResource( 6 )
anims/idle = SubResource( 7 )

[node name="deathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="topChecker" to="." method="_on_topChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="sidechecker" to="." method="_on_sidechecker_body_entered"]
[connection signal="body_entered" from="sidechecker" to="." method="_on_hitbox_body_entered"]
